[tool.poetry]
name = "dh2024"
version = "0.1.0"
description = ""
authors = ["Matevz Poljanc <matevz@sellestial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.21.2"
marvin = "^2.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
